--- a/download.html
+++ b/download.html
@@ -9,7 +9,7 @@
 <body>
     <img src="blackarrow.png" alt="Arrow" id="arrow">
     <div>
-        <a href="https://drive.google.com/drive/folders/1InF6Irb-7nxHw6ZPUkHXj5PGMnoecO3l?usp=drive_link"><img src="downloadLogo.png" alt="Install"></a>
+        <a href="https://drive.google.com/drive/folders/1InF6Irb-7nxHw6ZPUkHXj5PGMnoecO3l?usp=drive_link"><img src="download.png" alt="Install"></a>
     </div>
 </body>
 </html>
