--- a/Products.html
+++ b/Products.html
@@ -7,12 +7,24 @@
     <link rel="stylesheet" href="Products.css">
 </head>
 <body>
-    <h1>NovaStore(fill your need)</h1>
-    <div>
-        <hr>
-        <p>E~products</p>
-        <a href="loginPage.html"><img id="ejnsaImage" src="eejjnnssa.jpg" alt="EJNSA~image" width="400"></a>
-        <hr>
-    </div>
+    <main>
+        <div>
+            <h1>NovaStore(fill your need)</h1>
+            <hr>
+            <p>E~products</p>
+            <a href="loginPage.html"><img id="ejnsaImage" src="Ejnsa-download-logo.jpeg" alt="EJNSA~image" width="400"></a>
+            <a href="https://www.pocketfm.com/show/31c220230078aba44937b4e6bd1df5bd9b79611b "><img src="Novel-logo.webp" alt="Novel" id="novelLogo"></a>
+            <br><br><br><br><br><br>
+            <hr>
+        </div>
+    </main>
+    <footer>
+        <p id="followLink">Follow me on:</p>
+        <a href="https://youtube.com/@baby-gamer-369?si=QVhGNP7pJFl1g9o1" target="_blank" rel="noopener noreferrer"><img src="youtubelogo.webp" alt="Youtube" width="100" id="followLinks"></a>
+        <a href="https://x.com/ChessMa08372272?s=09" target="_blank" rel="noopener noreferrer"><img src="twitterlogo.png" alt="Twitter" width="100" id="followLinks"></a>
+        <a href="https://www.chess.com/member/s6pv" target="_blank" rel="noopener noreferrer"><img src="chesslogo.png" alt="Chess.com" width="120" id="followLinks"></a>
+        <br><br><br><br><br><br><br><br>
+        <p id="followLink">“Every time I delete the AI, it comes back... but now it knows my secrets.”(2054~R)</p>
+    </footer>
 </body>
 </html>
