--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
             <img class="image" src="eejjnnssa.jpg" alt="Image of EJNSA" width="405" height="257">
             <img class="image" src="space.jpg" alt="Image of EJNSA" width="405" height="257">
             <img class="image" src="brainAi.jpeg" alt="Image of EJNSA" width="405" height="257">
-            <img class="image" src="ai1.png" alt="Image of EJNSA" width="405" height="257">
-            <img class="image" src="Bytes.png" alt="Image of EJNSA" width="405" height="257">
-            <img class="image" src="ejnsapiclogo.jpg" alt="Image of EJNSA" width="405" height="257">
+            <img class="image" src="sifi-1.webp" alt="Image of EJNSA" width="405" height="257">
+            <img class="image" src="sifi4.jpg" alt="Image of EJNSA" width="405" height="257">
+            <img class="image" src="White-hole.jpg" alt="Image of EJNSA" width="405" height="257">
         </div>
         <div class="downloadButton">
             <img src="windows logo.jpg" alt="Window's logo" id="windowLogo" width="405" height="257">
