--- a/loginPage.html
+++ b/loginPage.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="loginPage.css">
 </head>
 <body>
-    <img src="pinkArrow.png" alt="An arrow" id="arrow">
+    <img src="arrow.png" alt="An arrow" id="arrow">
     <div class="signUpSTARAI">
         <form action="download.html">
             <input type="text" name="userName" placeholder="Enter your name" id="name">
