--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <a href="Products.html"><i class="fa-solid fa-magnifying-glass" id="searchButton"></i></a>
             <datalist id="products">
                 <option value="EJNSA"></option>
+                <option value="Novel"></option>
             </datalist>
         </div>
     </header>
