--- a/Images.html
+++ b/Images.html
@@ -14,8 +14,7 @@
         <img class="images" src="aiT.jpeg" alt="image" width="405" height="257">
         <img class="images" src="earth.png" alt="image" width="405" height="257">
         <img class="images" src="sifi7.webp" alt="image" width="405" height="257">
-        <img class="images" src="sifi8.jpg" alt="image" width="405" height="257">
-        <img class="images" src="sifi9.webp" alt="image" width="405" height="257">
+        <img class="images" src="sifi9.jpeg" alt="image" width="405" height="257">
         <img class="images" src="mars1.png" alt="image" width="405" height="257">
         <img class="images" src="mars2.png" alt="image" width="405" height="257">
         <img class="images" src="mars3.png" alt="image" width="405" height="257">
@@ -40,7 +39,6 @@
         <img class="images" src="ai3.png" alt="image" width="405" height="257">
         <img class="images" src="aihuman.jpeg" alt="image" width="405" height="257">
         <img class="images" src="brainAi.jpeg" alt="image" width="405" height="257">
-        <img class="images" src="Bytes.png" alt="image" width="405" height="257">
     </div>
 </body>
 </html>
