--- a/Images.html
+++ b/Images.html
@@ -12,9 +12,12 @@
         <img class="images" src="sifi5.jpg" alt="image" width="405" height="257">
         <img class="images" src="sifi6.webp" alt="image" width="405" height="257">
         <img class="images" src="aiT.jpeg" alt="image" width="405" height="257">
-        <img class="images" src="earth.png" alt="image" width="405" height="257">
+        <img class="images" src="ai2.png" alt="image" width="300" height="150">
+        <img class="images" src="earth.png" alt="image" width="300" height="150">
+        <img class="images" src="sifi9.jpeg" alt="image" width="300" height="150">
+        <img class="images" src="ai3.png" alt="image" width="300" height="150">
+        <img class="images" src="sifi3.jpeg" alt="image" width="405" height="257">
         <img class="images" src="sifi7.webp" alt="image" width="405" height="257">
-        <img class="images" src="sifi9.jpeg" alt="image" width="405" height="257">
         <img class="images" src="mars1.png" alt="image" width="405" height="257">
         <img class="images" src="mars2.png" alt="image" width="405" height="257">
         <img class="images" src="mars3.png" alt="image" width="405" height="257">
@@ -30,15 +33,13 @@
         <img class="images" src="Novel-logo.webp" alt="image" width="405" height="257">
         <img class="images" src="ejnsapiclogo.jpg" alt="image" width="405" height="257">
         <img class="images" src="sifi2.jpeg" alt="image" width="405" height="257">
-        <img class="images" src="sifi3.jpeg" alt="image" width="405" height="257">
         <img class="images" src="sifi11.jpeg" alt="image" width="405" height="257">
         <img class="images" src="dream.avif" alt="image" width="405" height="257">
         <img class="images" src="sifi10.jpeg" alt="image" width="405" height="257">
         <img class="images" src="ai1.png" alt="image" width="405" height="257">
-        <img class="images" src="ai2.png" alt="image" width="405" height="257">
-        <img class="images" src="ai3.png" alt="image" width="405" height="257">
         <img class="images" src="aihuman.jpeg" alt="image" width="405" height="257">
         <img class="images" src="brainAi.jpeg" alt="image" width="405" height="257">
+        <img class="images" src="sifi5.jpg" alt="image" width="405" height="257">
     </div>
 </body>
 </html>
