--- a/index.html
+++ b/index.html
@@ -14,15 +14,16 @@
             <a class="navBar" href="Images.html">Images</a>
             <a class="navBar" href="Videos.html">Videos</a>
             <a class="navBar" href="Products.html">Products</a>
-            <input id="searchInput" type="text" placeholder="Search products" list="products">
-            <a href="Products.html"><i class="fa-solid fa-magnifying-glass" id="searchButton"></i></a>
-            <datalist id="products">
-                <option value="EJNSA"></option>
-                <option value="Novel"></option>
-            </datalist>
+            <a href="mailto:realchessmasterbd@gmail.com"><button id="contactButton">Contact me?</button></a>
         </div>
     </header>
     <main>
+        <input id="searchInput" type="text" placeholder="Search products" list="products">
+        <a href="Products.html"><i class="fa-solid fa-magnifying-glass" id="searchButton"></i></a>
+        <datalist id="products">
+            <option value="EJNSA"></option>
+            <option value="Novel"></option>
+        </datalist>
         <div id="aimList">
             <h1 id="webHeading">NovaAI,the future of AI.</h1>
             <p>NovaAI have some aim.The aims are:</p>
@@ -52,12 +53,12 @@
             <p>Amolendu Das Dipto is the founder of NovaAI.<br>As of 2025,he is just 14 years old!<br>His aim is to creating a strong AGI.(2054~R)</p>
         </div>
         <div id="followLinks">
-            <p>Follow on:</p>
+            <p id="followText">Follow on:</p>
             <a href="https://youtube.com/@baby-gamer-369?si=QVhGNP7pJFl1g9o1" target="_blank" rel="noopener noreferrer"><img src="youtubelogo.webp" alt="Youtube" width="50" id="followLinks"></a>
             <a href="https://x.com/ChessMa08372272?s=09" target="_blank" rel="noopener noreferrer"><img src="twitterlogo.png" alt="Twitter" width="50" id="followLinks"></a>
             <a href="https://www.chess.com/member/s6pv" target="_blank" rel="noopener noreferrer"><img src="chesslogo.png" alt="Chess.com" width="60" id="followLinks"></a>
         </div>
-                <button id="changeMode">Dark mode</button>
+        <button id="changeMode">Dark mode</button>
     </main>
     <footer></footer>
     <script src="Script.js"></script>
