--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a class="navBar" href="Images.html">Images</a>
             <a class="navBar" href="Videos.html">Videos</a>
             <a class="navBar" href="Products.html">Products</a>
-            <a href="mailto:realchessmasterbd@gmail.com"><button id="contactButton">Contact me?</button></a>
+            <a href="mailto:realchessmasterbd@gmail.com"><button id="contactButton">Contact me <i class="fa-solid fa-envelope"></i></button></a>
         </div>
     </header>
     <main>
