--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <a class="navBar" href="Images.html">Images</a>
             <a class="navBar" href="Videos.html">Videos</a>
             <a class="navBar" href="Products.html">Products</a>
-            <a href="mailto:realchessmasterbd@gmail.com"><button id="contactButton">Contact me <i class="fa-solid fa-envelope"></i></button></a>
-            <a href="https://www.fiverr.com/s/Ke5lNV8"><button id="hireButton">Hire me <i class="fa fa-user-cog"></i></button></a>
+            <a href="mailto:realchessmasterbd@gmail.com"><button id="contactAndHireMeButton">Contact me <i class="fa-solid fa-envelope"></i></button></a>
+            <a href="https://www.fiverr.com/s/Ke5lNV8"><button id="contactAndHireMeButton">Hire me <i class="fa fa-user-cog"></i></button></a>
         </div>
     </header>
     <main>
