--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NovaAI</title>
+    <title>SuperAI</title>
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="Style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -27,12 +27,12 @@
             <option value="Novel"></option>
         </datalist>
         <div id="aimList">
-            <h1 id="webHeading">NovaAI,the future of AI.</h1>
-            <p>NovaAI have some aim.The aims are:</p>
+            <h1 id="webHeading">SuperAI,the future of AI.</h1>
+            <p>SuperAI have some aim.The aims are:</p>
             <ul>
-                <li>Creating a strong AGI.</li>
+                <li>Making a super AI</li>
                 <li>Making humans life easier.</li>
-                <li>Participate in mars mission.</li>
+                <li>Make the world smaller.</li>
             </ul>
         </div>
         <div id="images">
@@ -52,7 +52,7 @@
         </div>
         <div id="founderInfo">
             <img src="founderImg.jpg" alt="Founder's image" id="founderImg">
-            <p style="color: green;">The founder of NovaAI</p>
+            <p style="color: green;">The founder of SuperAI</p>
             <p>Amolendu Das Dipto is the founder of NovaAI.<br>As of 2025,he is just 14 years old!<br>His aim is to creating a strong AGI.(2054~R)</p>
         </div>
         <div id="followLinks">
@@ -66,4 +66,5 @@
     <footer></footer>
     <script src="Script.js"></script>
 </body>
+
 </html>
